Prepare for release v1.12.19
Signed-off-by: Michi Mutsuzaki <michi@isovalent.com>

--- a/install/kubernetes/Makefile.digests
+++ b/install/kubernetes/Makefile.digests
@@ -2,12 +2,12 @@
 # Copyright 2024 Authors of Cilium
 # SPDX-License-Identifier: Apache-2.0
 
-export CILIUM_DIGEST := "sha256:71218d52b2b9a63525e31e9be716810605696cbc02008e658953212f638d6b6b"
-export CLUSTERMESH_APISERVER_DIGEST := "sha256:237371c5e75c97389b81b5e44b6d39fd141e631efacf93fabafa6efa5174fa3a"
-export DOCKER_PLUGIN_DIGEST := "sha256:f5e566a68c023aedfe34794377615f25be08a0d02a1f36ba514a5c1e130b75ae"
-export HUBBLE_RELAY_DIGEST := "sha256:c82cc7843cbc13314fdc3e0c1e8e584200ca30d9afefbbaaf7a3abb4e1246083"
-export OPERATOR_ALIBABACLOUD_DIGEST := "sha256:1fa4cb0a255d45080c35d4fd92adb68700c864669d58ce396e18aa57488fc4fb"
-export OPERATOR_AWS_DIGEST := "sha256:b106b24c317ba95d16ad55fa81c9058ccc5a5961c40afaa504eb28cd29d88422"
-export OPERATOR_AZURE_DIGEST := "sha256:c44725a1c55d06b02334cb226544e810f4070e524c3d859df41a48135fc7ec98"
-export OPERATOR_GENERIC_DIGEST := "sha256:ac9b8a95d6faddacc1bca4145562c5143543dfbbc41b244383b52b8be83238ab"
-export OPERATOR_DIGEST := "sha256:b1b230432c7035f64eb54927e90c195613dce73a5c28810fa8cca2ca6c1418d0"
+export CILIUM_DIGEST := ""
+export CLUSTERMESH_APISERVER_DIGEST := ""
+export DOCKER_PLUGIN_DIGEST := ""
+export HUBBLE_RELAY_DIGEST := ""
+export OPERATOR_ALIBABACLOUD_DIGEST := ""
+export OPERATOR_AWS_DIGEST := ""
+export OPERATOR_AZURE_DIGEST := ""
+export OPERATOR_GENERIC_DIGEST := ""
+export OPERATOR_DIGEST := ""
