--- a/install/kubernetes/cilium/values.yaml
+++ b/install/kubernetes/cilium/values.yaml
@@ -110,11 +110,11 @@ rollOutCiliumPods: false
 image:
   override: ~
   repository: "quay.io/cilium/cilium"
-  tag: "v1.12.18"
+  tag: "v1.12.19"
   pullPolicy: "IfNotPresent"
   # cilium-digest
-  digest: "sha256:71218d52b2b9a63525e31e9be716810605696cbc02008e658953212f638d6b6b"
-  useDigest: true
+  digest: ""
+  useDigest: false
 
 # -- Affinity for cilium-agent.
 affinity:
@@ -848,10 +848,10 @@ hubble:
     image:
       override: ~
       repository: "quay.io/cilium/hubble-relay"
-      tag: "v1.12.18"
+      tag: "v1.12.19"
        # hubble-relay-digest
-      digest: "sha256:c82cc7843cbc13314fdc3e0c1e8e584200ca30d9afefbbaaf7a3abb4e1246083"
-      useDigest: true
+      digest: ""
+      useDigest: false
       pullPolicy: "IfNotPresent"
 
     # -- Specifies the resources for the hubble-relay pods
@@ -1648,16 +1648,16 @@ operator:
   image:
     override: ~
     repository: "quay.io/cilium/operator"
-    tag: "v1.12.18"
+    tag: "v1.12.19"
     # operator-generic-digest
-    genericDigest: "sha256:ac9b8a95d6faddacc1bca4145562c5143543dfbbc41b244383b52b8be83238ab"
+    genericDigest: ""
     # operator-azure-digest
-    azureDigest: "sha256:c44725a1c55d06b02334cb226544e810f4070e524c3d859df41a48135fc7ec98"
+    azureDigest: ""
     # operator-aws-digest
-    awsDigest: "sha256:b106b24c317ba95d16ad55fa81c9058ccc5a5961c40afaa504eb28cd29d88422"
+    awsDigest: ""
     # operator-alibabacloud-digest
-    alibabacloudDigest: "sha256:1fa4cb0a255d45080c35d4fd92adb68700c864669d58ce396e18aa57488fc4fb"
-    useDigest: true
+    alibabacloudDigest: ""
+    useDigest: false
     pullPolicy: "IfNotPresent"
     suffix: ""
 
@@ -1905,10 +1905,10 @@ preflight:
   image:
     override: ~
     repository: "quay.io/cilium/cilium"
-    tag: "v1.12.18"
+    tag: "v1.12.19"
     # cilium-digest
-    digest: "sha256:71218d52b2b9a63525e31e9be716810605696cbc02008e658953212f638d6b6b"
-    useDigest: true
+    digest: ""
+    useDigest: false
     pullPolicy: "IfNotPresent"
 
   # -- The priority class to use for the preflight pod.
@@ -2051,10 +2051,10 @@ clustermesh:
     image:
       override: ~
       repository: "quay.io/cilium/clustermesh-apiserver"
-      tag: "v1.12.18"
+      tag: "v1.12.19"
       # clustermesh-apiserver-digest
-      digest: "sha256:237371c5e75c97389b81b5e44b6d39fd141e631efacf93fabafa6efa5174fa3a"
-      useDigest: true
+      digest: ""
+      useDigest: false
       pullPolicy: "IfNotPresent"
 
     etcd:
