Prepare for release v1.14.7
Signed-off-by: Michi Mutsuzaki <michi@isovalent.com>

--- a/install/kubernetes/Makefile.digests
+++ b/install/kubernetes/Makefile.digests
@@ -2,13 +2,13 @@
 # Copyright 2024 Authors of Cilium
 # SPDX-License-Identifier: Apache-2.0
 
-export CILIUM_DIGEST := "sha256:37a49f1abb333279a9b802ee8a21c61cde9dd9138b5ac55f77bdfca733ba852a"
-export CLUSTERMESH_APISERVER_DIGEST := "sha256:0b4d312c4d066db3cd8b7693b871c544319ade5c9a4ebeafba4fda18f934f2a1"
-export DOCKER_PLUGIN_DIGEST := "sha256:eaf0febfcb512b70565f3814e45ac17f3844693bfd023ec90e20fb993d66efb8"
-export HUBBLE_RELAY_DIGEST := "sha256:adeb90adae481bb952211483f511afee40825707953ed7ac118902d3bc8dd37f"
-export KVSTOREMESH_DIGEST := "sha256:bceb8072dc53152f66c8fe63816672f69a3a01a7f43b7491d965f0472821de10"
-export OPERATOR_ALIBABACLOUD_DIGEST := "sha256:5365f1a845fedfa2718c29e73b4b30d9f7a89c68a9ca62dc1229ea2a5aec0f04"
-export OPERATOR_AWS_DIGEST := "sha256:8ed8b5c82fdccfc857891fe9d13ebcbad227a411871d4fc4c1803a32d6ba8e08"
-export OPERATOR_AZURE_DIGEST := "sha256:f4990a3f0db6e3c2a1e586b6b22fe032148050210e80bbb1debc265b2435c63e"
-export OPERATOR_GENERIC_DIGEST := "sha256:2f0bf8fb8362c7379f3bf95036b90ad5b67378ed05cd8eb0410c1afc13423848"
-export OPERATOR_DIGEST := "sha256:e1b6119329036d83d412de13613c9f1c0332885fa112255483619b13259da7c6"
+export CILIUM_DIGEST := ""
+export CLUSTERMESH_APISERVER_DIGEST := ""
+export DOCKER_PLUGIN_DIGEST := ""
+export HUBBLE_RELAY_DIGEST := ""
+export KVSTOREMESH_DIGEST := ""
+export OPERATOR_ALIBABACLOUD_DIGEST := ""
+export OPERATOR_AWS_DIGEST := ""
+export OPERATOR_AZURE_DIGEST := ""
+export OPERATOR_GENERIC_DIGEST := ""
+export OPERATOR_DIGEST := ""
