install: Update image digests for v1.12.19
Generated from https://github.com/cilium/cilium/actions/runs/7893893123.

## Docker Manifests

### cilium

`docker.io/cilium/cilium:v1.12.19@sha256:b997994ab759443d9fc9807eb39b4784bf03e13730a8132ffe5df3edef22a312`
`quay.io/cilium/cilium:v1.12.19@sha256:b997994ab759443d9fc9807eb39b4784bf03e13730a8132ffe5df3edef22a312`

### clustermesh-apiserver

`docker.io/cilium/clustermesh-apiserver:v1.12.19@sha256:61f8e871760dceaa0c0459bbf44a3049dd0f4ab15e57e063d9b3284434cb3dd8`
`quay.io/cilium/clustermesh-apiserver:v1.12.19@sha256:61f8e871760dceaa0c0459bbf44a3049dd0f4ab15e57e063d9b3284434cb3dd8`

### docker-plugin

`docker.io/cilium/docker-plugin:v1.12.19@sha256:382904970a2f68b1394fe905907f4f7065b925c19187d2d82d4322932f2fce0e`
`quay.io/cilium/docker-plugin:v1.12.19@sha256:382904970a2f68b1394fe905907f4f7065b925c19187d2d82d4322932f2fce0e`

### hubble-relay

`docker.io/cilium/hubble-relay:v1.12.19@sha256:19f2dee371523888985e6e34b30d07ef3f84f2a9206ad79bdfc8dede96e25d5c`
`quay.io/cilium/hubble-relay:v1.12.19@sha256:19f2dee371523888985e6e34b30d07ef3f84f2a9206ad79bdfc8dede96e25d5c`

### operator-alibabacloud

`docker.io/cilium/operator-alibabacloud:v1.12.19@sha256:6d9be533aeefed303355b48c495865f603efbe46df85614e6fbbdbc7d0fa06c6`
`quay.io/cilium/operator-alibabacloud:v1.12.19@sha256:6d9be533aeefed303355b48c495865f603efbe46df85614e6fbbdbc7d0fa06c6`

### operator-aws

`docker.io/cilium/operator-aws:v1.12.19@sha256:a6e8d754d1319977d6faf3d73893284be9cb3cd6fa4e711c4f07ff5bc96131aa`
`quay.io/cilium/operator-aws:v1.12.19@sha256:a6e8d754d1319977d6faf3d73893284be9cb3cd6fa4e711c4f07ff5bc96131aa`

### operator-azure

`docker.io/cilium/operator-azure:v1.12.19@sha256:bab9f1f3fa52d52e88c8fca9fc88be000150807a088b3bb1f3dad777d727da3c`
`quay.io/cilium/operator-azure:v1.12.19@sha256:bab9f1f3fa52d52e88c8fca9fc88be000150807a088b3bb1f3dad777d727da3c`

### operator-generic

`docker.io/cilium/operator-generic:v1.12.19@sha256:da4d72facecde862c88d08bf99c3f476845beb40705

--- a/install/kubernetes/Makefile.digests
+++ b/install/kubernetes/Makefile.digests
@@ -2,12 +2,12 @@
 # Copyright 2024 Authors of Cilium
 # SPDX-License-Identifier: Apache-2.0
 
-export CILIUM_DIGEST := ""
-export CLUSTERMESH_APISERVER_DIGEST := ""
-export DOCKER_PLUGIN_DIGEST := ""
-export HUBBLE_RELAY_DIGEST := ""
-export OPERATOR_ALIBABACLOUD_DIGEST := ""
-export OPERATOR_AWS_DIGEST := ""
-export OPERATOR_AZURE_DIGEST := ""
-export OPERATOR_GENERIC_DIGEST := ""
-export OPERATOR_DIGEST := ""
+export CILIUM_DIGEST := "sha256:b997994ab759443d9fc9807eb39b4784bf03e13730a8132ffe5df3edef22a312"
+export CLUSTERMESH_APISERVER_DIGEST := "sha256:61f8e871760dceaa0c0459bbf44a3049dd0f4ab15e57e063d9b3284434cb3dd8"
+export DOCKER_PLUGIN_DIGEST := "sha256:382904970a2f68b1394fe905907f4f7065b925c19187d2d82d4322932f2fce0e"
+export HUBBLE_RELAY_DIGEST := "sha256:19f2dee371523888985e6e34b30d07ef3f84f2a9206ad79bdfc8dede96e25d5c"
+export OPERATOR_ALIBABACLOUD_DIGEST := "sha256:6d9be533aeefed303355b48c495865f603efbe46df85614e6fbbdbc7d0fa06c6"
+export OPERATOR_AWS_DIGEST := "sha256:a6e8d754d1319977d6faf3d73893284be9cb3cd6fa4e711c4f07ff5bc96131aa"
+export OPERATOR_AZURE_DIGEST := "sha256:bab9f1f3fa52d52e88c8fca9fc88be000150807a088b3bb1f3dad777d727da3c"
+export OPERATOR_GENERIC_DIGEST := "sha256:da4d72facecde862c88d08bf99c3f476845beb407052a0cc4c06b68cc93b7570"
+export OPERATOR_DIGEST := "sha256:63cab9695e49ae5a6bb2f80ef89dec5e6a48472dcfd959e14a929c0ded70c483"
