install: Update image digests for v1.14.7
Based on https://github.com/cilium/cilium/actions/runs/7893656360. I had
to copy these digests manually because image-digest-output.txt-v1.14.7
was empty.

## Docker Manifests

### cilium

`docker.io/cilium/cilium:v1.14.7@sha256:45ce2b87696082ecf7d53ba1c64ceeb4217578033e5ef28ac479ec049a48bc32`
`quay.io/cilium/cilium:v1.14.7@sha256:45ce2b87696082ecf7d53ba1c64ceeb4217578033e5ef28ac479ec049a48bc32`

### clustermesh-apiserver

`docker.io/cilium/clustermesh-apiserver:v1.14.7@sha256:28f3ffe53365ca79831af600f09a95c0b3e9959f5f891b416dab8cedd90c263d`
`quay.io/cilium/clustermesh-apiserver:v1.14.7@sha256:28f3ffe53365ca79831af600f09a95c0b3e9959f5f891b416dab8cedd90c263d`

### docker-plugin

`docker.io/cilium/docker-plugin:v1.14.7@sha256:929111c0edb3b857d21eb385e6fd5c4de30b7b45a2aceeec0bb6ca87ec8968c4`
`quay.io/cilium/docker-plugin:v1.14.7@sha256:929111c0edb3b857d21eb385e6fd5c4de30b7b45a2aceeec0bb6ca87ec8968c4`

### hubble-relay

`docker.io/cilium/hubble-relay:v1.14.7@sha256:46762393daf4a0aaef76b106614c2615942f98f10aeacd435ea3fb1a0bdf69e4`
`quay.io/cilium/hubble-relay:v1.14.7@sha256:46762393daf4a0aaef76b106614c2615942f98f10aeacd435ea3fb1a0bdf69e4`

### kvstoremesh

`docker.io/cilium/kvstoremesh:v1.14.7@sha256:4386d522bce35ce55650d4bd100d9458bf5b99d6ebbb709016aec25bf50e7b8d`
`quay.io/cilium/kvstoremesh:v1.14.7@sha256:4386d522bce35ce55650d4bd100d9458bf5b99d6ebbb709016aec25bf50e7b8d`

### operator-alibabacloud

`docker.io/cilium/operator-alibabacloud:v1.14.7@sha256:93e8a51655ee167a9eef42269e1f10fc2f74bdf4377299687fe4266dd07b534a`
`quay.io/cilium/operator-alibabacloud:v1.14.7@sha256:93e8a51655ee167a9eef42269e1f10fc2f74bdf4377299687fe4266dd07b534a`

### operator-aws

`docker.io/cilium/operator-aws:v1.14.7@sha256:161dde3302b259ebca4964b7ee3f995ddbc02dd52deb5d411cbd9b7db66e223d`
`quay.io/cilium/operator-aws:v1.14.7@sha256:161dde3302b259ebca4964b7ee3f995ddbc02dd52deb5d411cbd9b7db66e223d`

### operator-azure

`docker.io/cilium/operator-azure:v1.14

--- a/install/kubernetes/Makefile.digests
+++ b/install/kubernetes/Makefile.digests
@@ -2,13 +2,13 @@
 # Copyright 2024 Authors of Cilium
 # SPDX-License-Identifier: Apache-2.0
 
-export CILIUM_DIGEST := ""
-export CLUSTERMESH_APISERVER_DIGEST := ""
-export DOCKER_PLUGIN_DIGEST := ""
-export HUBBLE_RELAY_DIGEST := ""
-export KVSTOREMESH_DIGEST := ""
-export OPERATOR_ALIBABACLOUD_DIGEST := ""
-export OPERATOR_AWS_DIGEST := ""
-export OPERATOR_AZURE_DIGEST := ""
-export OPERATOR_GENERIC_DIGEST := ""
-export OPERATOR_DIGEST := ""
+export CILIUM_DIGEST := "sha256:45ce2b87696082ecf7d53ba1c64ceeb4217578033e5ef28ac479ec049a48bc32"
+export CLUSTERMESH_APISERVER_DIGEST := "sha256:28f3ffe53365ca79831af600f09a95c0b3e9959f5f891b416dab8cedd90c263d"
+export DOCKER_PLUGIN_DIGEST := "sha256:929111c0edb3b857d21eb385e6fd5c4de30b7b45a2aceeec0bb6ca87ec8968c4"
+export HUBBLE_RELAY_DIGEST := "sha256:46762393daf4a0aaef76b106614c2615942f98f10aeacd435ea3fb1a0bdf69e4"
+export KVSTOREMESH_DIGEST := "sha256:4386d522bce35ce55650d4bd100d9458bf5b99d6ebbb709016aec25bf50e7b8d"
+export OPERATOR_ALIBABACLOUD_DIGEST := "sha256:93e8a51655ee167a9eef42269e1f10fc2f74bdf4377299687fe4266dd07b534a"
+export OPERATOR_AWS_DIGEST := "sha256:161dde3302b259ebca4964b7ee3f995ddbc02dd52deb5d411cbd9b7db66e223d"
+export OPERATOR_AZURE_DIGEST := "sha256:7a7faaa0aa981a2819ba74b7e3615c638e1e186bb91efbddf4b0c78a4774477e"
+export OPERATOR_GENERIC_DIGEST := "sha256:37ef0bd85c27c765c637cd58c3ff4a559f8734ae39f9d1839a3ac7803de7b952"
+export OPERATOR_DIGEST := "sha256:4524a0b3a64ab05dc2f58c6f8aa1244096858cb3af908f73c78d8a0e669ce364"
