workflows: Clean IPsec test output
[ upstream commit 3c479d406ab1abc548b317f02ab2ccd1a3bb20ef ]

The test output are riddled with logs such as:

    Defaulted container "cilium-agent" out of: cilium-agent, config
    (init), mount-cgroup (init), apply-sysctl-overwrites (init),
    mount-bpf-fs (init), clean-cilium-state (init),
    install-cni-binaries (init)

This gets particularly noisy when waiting for the key rotation to
complete, during which time we run kubectl exec repeatedly. This commit
fixes it.

Signed-off-by: Paul Chaignon <paul.chaignon@gmail.com>
Signed-off-by: Tam Mach <tam.mach@cilium.io>

--- a/.github/workflows/conformance-ipsec-e2e.yaml
+++ b/.github/workflows/conformance-ipsec-e2e.yaml
@@ -275,7 +275,7 @@ jobs:
 
           ./cilium-cli status --wait
           kubectl get pods --all-namespaces -o wide
-          kubectl -n kube-system exec daemonset/cilium -- cilium status
+          kubectl -n kube-system exec daemonset/cilium -c cilium-agent -- cilium status
 
           mkdir -p cilium-junits
 
@@ -298,7 +298,7 @@ jobs:
 
             # Wait until key rotation starts
             while true; do
-              keys_in_use=$(kubectl -n kube-system exec daemonset/cilium -- cilium encrypt status | awk '/Keys in use/ {print $NF}')
+              keys_in_use=$(kubectl -n kube-system exec daemonset/cilium -c cilium-agent -- cilium encrypt status | awk '/Keys in use/ {print $NF}')
               if [[ $keys_in_use == 2 ]]; then
                 break
               fi
@@ -310,7 +310,7 @@ jobs:
             # By default the key rotation cleanup delay is 5min, let's sleep 4min before actively polling
             sleep $((4*60))
             while true; do
-              keys_in_use=$(kubectl -n kube-system exec daemonset/cilium -- cilium encrypt status | awk '/Keys in use/ {print $NF}')
+              keys_in_use=$(kubectl -n kube-system exec daemonset/cilium -c cilium-agent -- cilium encrypt status | awk '/Keys in use/ {print $NF}')
               if [[ $keys_in_use == 1 ]]; then
                 break
               fi
