conformance-e2e: Explicitly set devices to fix e2e tests
[ upstream commit 0e673607c70b742c91518ed8c21b38646e43a76b ]

We are failing a e2e test quite consistantly, while the root cause is
not fully clear, it seems that setting devices explicitly might help.

Signed-off-by: Dylan Reimerink <dylan.reimerink@isovalent.com>
Signed-off-by: Michi Mutsuzaki <michi@isovalent.com>

--- a/.github/workflows/conformance-e2e.yaml
+++ b/.github/workflows/conformance-e2e.yaml
@@ -127,6 +127,7 @@ jobs:
             kernel: '6.1-20240131.102043'
             kube-proxy: 'none'
             kpr: 'true'
+            devices: '{eth0,eth1}'
             tunnel: 'vxlan'
             lb-mode: 'snat'
             egress-gateway: 'true'
