workflows: replace references to bpf-next with current LTS
We currently don't update bpf-next kernels, since we don't want
to cause additional regressions. This is a problem since lvh updates
may break existing images.

Instead of relying on bpf-next, use the current LTS kernel in
workflows.

Signed-off-by: Lorenz Bauer <lmb@isovalent.com>

--- a/.github/actions/ginkgo/main-k8s-versions.yaml
+++ b/.github/actions/ginkgo/main-k8s-versions.yaml
@@ -6,7 +6,7 @@ include:
     # renovate: datasource=docker
     kube-image: "quay.io/cilium/kindest-node:v1.29.0-rc.1@sha256:6631d58da3569930cf21697c2113feb9c76bc044c1c13d98808a3695dd91d8b0"
     # renovate: datasource=docker depName=quay.io/lvh-images/kind
-    kernel: "bpf-next-20240112.012951@sha256:ef2daf719bece734775e6d9679a7c6a22ba3483fb6183be7491314ad9a30fd2c"
+    kernel: "6.6-20240208.105738@sha256:2ae01ae28d314dfc527ca97ea16afaa1ac98c21954139f55652b5d5383ad7910"
 
   - k8s-version: "1.28"
     ip-family: "dual"
