--- a/.github/workflows/tests-datapath-verifier.yaml
+++ b/.github/workflows/tests-datapath-verifier.yaml
@@ -85,7 +85,7 @@ jobs:
           - kernel: '6.1-20240215.093821'
             ci-kernel: '61'
           # renovate: datasource=docker depName=quay.io/lvh-images/complexity-test
-          - kernel: 'bpf-next-20240112.012951'
+          - kernel: '6.6-20240208.105738'
             ci-kernel: 'netnext'
     timeout-minutes: 60
     steps:
