--- a/.github/workflows/conformance-ipsec-e2e.yaml
+++ b/.github/workflows/conformance-ipsec-e2e.yaml
@@ -106,7 +106,7 @@ jobs:
 
           - name: '4'
             # renovate: datasource=docker depName=quay.io/lvh-images/kind
-            kernel: 'bpf-next-20231211.012942'
+            kernel: '6.6-20240208.105738'
             kube-proxy: 'iptables'
             kpr: 'false'
             tunnel: 'geneve'
