--- a/.github/workflows/conformance-runtime.yaml
+++ b/.github/workflows/conformance-runtime.yaml
@@ -260,7 +260,8 @@ jobs:
         with:
           test-name: runtime-tests
           install-dependencies: true
-          image-version: bpf-next-20230526.100931@sha256:859602be3f66a359d9d20f23505b7df5c46d21f174b336a5bc4dd4f9ea558b54
+          # renovate: datasource=docker depName=quay.io/lvh-images/kind
+          image-version: 6.6-20240208.105738@sha256:2ae01ae28d314dfc527ca97ea16afaa1ac98c21954139f55652b5d5383ad7910
           host-mount: ./
           cpu: 4
           mem: 12G
