--- a/.github/workflows/tests-ipsec-upgrade.yaml
+++ b/.github/workflows/tests-ipsec-upgrade.yaml
@@ -73,7 +73,7 @@ jobs:
       fail-fast: false
       max-parallel: 16
       matrix:
-        config: ['5.4', '5.10', '6.1', 'bpf-next']
+        config: ['5.4', '5.10', '6.1', '6.6']
         mode: ['minor', 'patch']
         include:
           # Define three config sets
@@ -105,9 +105,9 @@ jobs:
             # https://github.com/cilium/cilium/issues/29805#issuecomment-1855600171
             ipv6: 'false'
 
-          - config: 'bpf-next'
-            # We don't want to update bpf-next after branching
-            kernel: 'bpf-next-20230420.212204'
+          - config: '6.6'
+            # renovate: datasource=docker depName=quay.io/lvh-images/kind
+            kernel: '6.6-20240208.105738'
             kube-proxy: 'iptables'
             kpr: 'disabled'
             tunnel: 'vxlan'
@@ -127,7 +127,7 @@ jobs:
             mode: 'minor'
             name: '3'
 
-          - config: 'bpf-next'
+          - config: '6.6'
             mode: 'minor'
             name: '4'
 
@@ -142,10 +142,6 @@ jobs:
           - config: '6.1'
             mode: 'patch'
             name: '7'
-
-          - config: 'bpf-next'
-            mode: 'patch'
-            name: '8'
 
     timeout-minutes: 70
     steps:
